--- a/Loweb/Loweb.vcxproj.filters
+++ b/Loweb/Loweb.vcxproj.filters
@@ -30,6 +30,12 @@
     <Filter Include="Header Files\Utils\Low-level">
       <UniqueIdentifier>{8a69d674-84c2-4276-a6fe-eba4d52dca92}</UniqueIdentifier>
     </Filter>
+    <Filter Include="Source Files\Utils">
+      <UniqueIdentifier>{c7d0659b-a80a-48d6-8c0c-3781357322a3}</UniqueIdentifier>
+    </Filter>
+    <Filter Include="Source Files\Utils\Low-level">
+      <UniqueIdentifier>{ae18f8dd-3a1b-44f8-9742-768433d6790f}</UniqueIdentifier>
+    </Filter>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp">
@@ -38,11 +44,11 @@
     <ClCompile Include="Server.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="View.cpp">
-      <Filter>Source Files\Views</Filter>
+    <ClCompile Include="Views\View.cpp">
+      <Filter>Header Files\Views</Filter>
     </ClCompile>
-    <ClCompile Include="HttpReader.cpp">
-      <Filter>Source Files</Filter>
+    <ClCompile Include="Utils\Low-level\HttpRequestReader.cpp">
+      <Filter>Source Files\Utils\Low-level</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
@@ -51,11 +57,11 @@
     </QtMoc>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="View.h">
-      <Filter>Header Files\Views</Filter>
+    <ClInclude Include="Views\View.h">
+      <Filter>Source Files\Views</Filter>
     </ClInclude>
-    <ClInclude Include="HttpReader.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="Utils\Low-level\HttpRequestReader.h">
+      <Filter>Header Files\Utils\Low-level</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
