--- a/Loweb/Loweb.vcxproj.filters
+++ b/Loweb/Loweb.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="Utils\Low-level\HttpRequestReader.cpp">
       <Filter>Source Files\Utils\Low-level</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\render.cpp">
+      <Filter>Source Files\Utils</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Server.h">
@@ -62,6 +65,9 @@
     </ClInclude>
     <ClInclude Include="Utils\Low-level\HttpRequestReader.h">
       <Filter>Header Files\Utils\Low-level</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\render.h">
+      <Filter>Header Files\Utils</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
