--- a/LowebAdmin/LowebAdmin.vcxproj
+++ b/LowebAdmin/LowebAdmin.vcxproj
@@ -11,7 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{35B0435E-F897-4140-8D3A-38BE3EED9547}</ProjectGuid>
+    <ProjectGuid>{5E8C8956-BE3E-45C9-9D17-8EF4D79335D6}</ProjectGuid>
     <Keyword>QtVS_v303</Keyword>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0.18362.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">10.0.18362.0</WindowsTargetPlatformVersion>
@@ -19,7 +19,7 @@
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
-    <ConfigurationType>DynamicLibrary</ConfigurationType>
+    <ConfigurationType>Application</ConfigurationType>
     <PlatformToolset>v142</PlatformToolset>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="Configuration">
@@ -46,20 +46,14 @@
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
   </PropertyGroup>
-  <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <ClCompile>
-      <LanguageStandard>stdcpp17</LanguageStandard>
-      <PreprocessorDefinitions>MAKEDLL;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-    </ClCompile>
-  </ItemDefinitionGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="QtSettings">
     <QtInstall>msvc2019_64</QtInstall>
-    <QtModules>core;network</QtModules>
+    <QtModules>core</QtModules>
     <QtBuildConfig>debug</QtBuildConfig>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'" Label="QtSettings">
     <QtInstall>msvc2019_64</QtInstall>
-    <QtModules>core;network</QtModules>
+    <QtModules>core</QtModules>
     <QtBuildConfig>release</QtBuildConfig>
   </PropertyGroup>
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.props')">
@@ -92,27 +86,14 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Apps\Application.cpp" />
-    <ClCompile Include="Server.cpp" />
-    <ClCompile Include="Utils\Low-level\HttpRequest.cpp" />
-    <ClCompile Include="Utils\Low-level\HttpResponse.cpp" />
-    <ClCompile Include="Utils\Low-level\TemplateEngine.cpp" />
-    <ClCompile Include="Utils\ProjectConfig.cpp" />
-    <ClCompile Include="Utils\render.cpp" />
-    <ClCompile Include="Views\View.cpp" />
+    <ClCompile Include="LowebAdmin.cpp" />
+    <ClCompile Include="main.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <QtMoc Include="Server.h" />
+    <ClInclude Include="LowebAdmin.h" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="Apps\Application.h" />
-    <ClInclude Include="dll\ExportDLL.h" />
-    <ClInclude Include="Utils\Low-level\HttpRequest.h" />
-    <ClInclude Include="Utils\Low-level\HttpResponse.h" />
-    <ClInclude Include="Utils\Low-level\TemplateEngine.h" />
-    <ClInclude Include="Utils\ProjectConfig.h" />
-    <ClInclude Include="Utils\render.h" />
-    <ClInclude Include="Views\View.h" />
+    <QtRcc Include="Resource.qrc" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
