--- a/Loweb/Loweb.vcxproj.filters
+++ b/Loweb/Loweb.vcxproj.filters
@@ -71,6 +71,9 @@
     <ClCompile Include="Utils\Low-level\TemplateEngine.cpp">
       <Filter>Source Files\Utils\Low-level</Filter>
     </ClCompile>
+    <ClCompile Include="Utils\ProjectConfig.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="Server.h">
@@ -98,6 +101,9 @@
     </ClInclude>
     <ClInclude Include="Utils\Low-level\TemplateEngine.h">
       <Filter>Header Files\Utils\Low-level</Filter>
+    </ClInclude>
+    <ClInclude Include="Utils\ProjectConfig.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
 </Project>
