--- a/Loweb/Loweb.vcxproj
+++ b/Loweb/Loweb.vcxproj
@@ -94,9 +94,11 @@
   <ItemGroup>
     <ClCompile Include="Apps\Application.cpp" />
     <ClCompile Include="ProjectConfig.cpp" />
+    <ClCompile Include="Utils\generateRandomString.cpp" />
     <ClCompile Include="Utils\Low-level\HttpRequest.cpp" />
     <ClCompile Include="Utils\Low-level\HttpResponse.cpp" />
     <ClCompile Include="Utils\Low-level\Server.cpp" />
+    <ClCompile Include="Utils\Low-level\Session.cpp" />
     <ClCompile Include="Utils\Low-level\TemplateEngine.cpp" />
     <ClCompile Include="Utils\render.cpp" />
     <ClCompile Include="Views\View.cpp" />
@@ -105,9 +107,11 @@
     <ClInclude Include="Apps\Application.h" />
     <ClInclude Include="dll\ExportDLL.h" />
     <ClInclude Include="ProjectConfig.h" />
+    <ClInclude Include="Utils\generateRandomString.h" />
     <ClInclude Include="Utils\Low-level\HttpRequest.h" />
     <ClInclude Include="Utils\Low-level\HttpResponse.h" />
     <QtMoc Include="Utils\Low-level\Server.h" />
+    <ClInclude Include="Utils\Low-level\Session.h" />
     <ClInclude Include="Utils\Low-level\TemplateEngine.h" />
     <ClInclude Include="Utils\render.h" />
     <ClInclude Include="Views\View.h" />
